# terminal-typer

./: .gitignore  CMakeLists.txt
libs/: .gitignore  CMakeLists.txt  cpr.cmake  curl.cmake  cxxopts.cmake  gtest.cmake  ncurses.cmake  simplejson.cmake
res/: aladin.txt  c.txt  inception.txt
src/: CMakeLists.txt  curl.cpp  curltest.cpp  display.cpp  display.h  error_handeling.cpp  error_handeling.h  file.cpp  file.h  main.cpp  quote.cpp  test.cpp  typer.cpp  typer.h  util.cpp  util.h
src/typer/: CMakeLists.txt  display.cpp  file.cpp  util.cpp
src/typer/include/: file.h  util.h
src/typer/test/: CMakeLists.txt  util.test.cpp
